<resources>
    <string name="app_name">Ayo Dolan!</string>
    <string name="pantai">Pantai</string>
    <string name="gunung">Gunung</string>
    <string name="taman">Taman</string>
    <string name="cagar_budaya">Cagar Budaya</string>
    <string name="itemgambar">itemGambar</string>
    <string name="title">title</string>
    <string name="lokasi">lokasi</string>
    <string name="share">share</string>
    <string name="_5_00">5.00</string>
    <string name="username">username</string>
    <string name="review">Review</string>
    <string name="description">Description :</string>
    <string name="review_dtl">Review :</string>
    <string name="no_connection">No Connection</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="turn_on">Please Turn On Your Connection</string>
    <string name="retry">Retry</string>
    <string name="title_ml">"Model Implementation"</string>
    <string name="positif">"Positif"</string>
    <string name="negatif">"Negatif"</string>
    <string name="error">"Please Enter a Message"</string>
    <string name="try_your_own_text_with_our_model">"Try Your Own Text"</string>
    <string name="enter">Enter</string>
    <string name="hello">Category</string>
    <string name="input_text">Input Text</string>
    <string name="text_review">"%s"</string>
    <string name="text_star">(%s)</string>
    <string name="cek">cek</string>
    <string name="logo">Logo</string>
</resources>