<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="false"
    android:orientation="vertical"
    tools:context=".ui.home.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:src="@drawable/background_home"
        android:contentDescription="@string/itemgambar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="4dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <LinearLayout
                android:id="@+id/pantai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/background_card"
                android:padding="20dp"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:src="@drawable/beach"
                    android:contentDescription="@string/pantai" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pantai"
                android:textAlignment="center"
                android:textColor="?attr/textColor"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <LinearLayout
                android:id="@+id/gunung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/background_card"
                android:padding="20dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:src="@drawable/mountain"
                    android:contentDescription="@string/gunung" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gunung"
                android:textAlignment="center"
                android:textColor="?attr/textColor"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <LinearLayout
                android:id="@+id/taman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/background_card"
                android:padding="20dp"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:src="@drawable/park"
                    android:contentDescription="@string/taman" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/taman"
                android:textAlignment="center"
                android:textColor="?attr/textColor"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <LinearLayout
                android:id="@+id/cagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/background_card"
                android:padding="20dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:src="@drawable/buildings"
                    android:contentDescription="@string/cagar_budaya" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cagar_budaya"
                android:textAlignment="center"
                android:textColor="?attr/textColor"
                />
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>
</ScrollView>